--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,19 @@
 # Run with: sudo docker-compose -f docker-compose.yml up
 version: '3'
-networks:
-  redis:
-  
 services:
   redis:
     image: redis
     command: redis-server --requirepass $REDIS_PASSWORD
     restart: always
-    networks:
-      - redis
+    network_mode: host
   redis-commander:
     image: rediscommander/redis-commander
     environment:
-      - REDIS_HOST=redis
+      - REDIS_HOST=localhost
       - REDIS_PORT=6379
       - REDIS_PASSWORD=${REDIS_PASSWORD}
       - HTTP_PASSWORD=${REDIS_PASSWORD}
-    ports:
-      - "8081:8081"
-    networks:
-      - redis
+    network_mode: host
     depends_on:
       - redis
   portr:
@@ -32,8 +25,7 @@ services:
       - GATEWAY_DOMAIN=${GATEWAY_DOMAIN}
     depends_on:
       - redis
-    networks:
-      - redis
+    network_mode: host
   # tests:
   #   build:
   #     context: .
