--- a/Dockerfile.portr
+++ b/Dockerfile.portr
@@ -8,6 +8,11 @@ RUN wget https://github.com/amalshaji/portr/releases/download/0.0.26-beta/portr_
     unzip portr_0.0.26-beta_Linux_x86_64.zip && \
     rm portr_0.0.26-beta_Linux_x86_64.zip
 
+RUN apt-get install -y curl sudo && \
+    curl -sSL https://ngrok-agent.s3.amazonaws.com/ngrok.asc | tee /etc/apt/trusted.gpg.d/ngrok.asc >/dev/null && \
+    echo "deb https://ngrok-agent.s3.amazonaws.com buster main" | tee /etc/apt/sources.list.d/ngrok.list && \
+    apt-get update && \
+    apt-get install -y ngrok
 COPY start_tunnel.sh .
 RUN chmod +x start_tunnel.sh
 
