--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,12 @@ services:
     depends_on:
       - redis
     network_mode: host
+  ngrok:
+    image: ngrok/ngrok:latest
+    environment:
+      - NGROK_AUTHTOKEN=${NGROK_TOKEN}
+    command: tcp 6379
+    network_mode: host
   # tests:
   #   build:
   #     context: .
