--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
   ngrok:
     image: ngrok/ngrok:latest
     environment:
-      - NGROK_AUTHTOKEN=${NGROK_TOKEN}
+      - NGROK_AUTHTOKEN=${NGROK_AUTHTOKEN}
     command: tcp 6379
     network_mode: host
   # tests:
