--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ version: '3.8'
 
 services:
   redis:
-    image: redis:7.2-alpine
+    image: redis
     command: 
       - redis-server 
       - --requirepass $REDIS_PASSWORD
