--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,12 +48,12 @@ services:
       - redis
     network_mode: host
     restart: unless-stopped
-  ngrok:
-    image: ngrok/ngrok:latest
-    environment:
-      - NGROK_AUTHTOKEN=${NGROK_AUTHTOKEN}
-    command: tcp 6379
-    network_mode: host
+  # ngrok:
+  #   image: ngrok/ngrok:latest
+  #   environment:
+  #     - NGROK_AUTHTOKEN=${NGROK_AUTHTOKEN}
+  #   command: tcp 6379
+  #   network_mode: host
   monitor:
     build:
       context: .
